force-brf/main/objects/brf_BatchApexError__c/brf_BatchApexError__c.object-meta.xml
<CustomObject>
    <label>Batch Apex Error</label>
    <nameField>
        <displayFormat>JOBE-{00000000}</displayFormat>
        <label>Batch Apex Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>