force-brf/main/objects/brf_BatchApexError__c/fields/BatchApexErrorLog__c.field-meta.xml
<CustomField>
    <fullName>BatchApexErrorLog__c</fullName>
    <label>Batch Apex Error Log</label>
    <referenceTo>brf_BatchApexErrorLog__c</referenceTo>
    <relationshipLabel>Batch Apex Errors</relationshipLabel>
    <relationshipName>BatchApexErrors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>