force-brf/main/objects/brf_BatchApexError__c/fields/DoesExceedJobScopeMaxLength__c.field-meta.xml
<CustomField>
    <fullName>DoesExceedJobScopeMaxLength__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Exceed Job Scope Max Length</label>
    <type>Checkbox</type>
</CustomField>