force-brf/main/objects/brf_BatchApexError__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>Exception Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>