force-brf/main/objects/brf_BatchApexError__c/fields/JobApexClass__c.field-meta.xml
<CustomField>
    <fullName>JobApexClass__c</fullName>
    <label>Job Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>