force-brf/main/objects/brf_BatchApexError__c/fields/JobScope__c.field-meta.xml
<CustomField>
    <fullName>JobScope__c</fullName>
    <label>Job Scope</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>