force-brf/main/objects/brf_BatchApexError__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>