force-brf/main/objects/brf_BatchApexError__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>