force-brf/main/objects/brf_BatchApexError__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>